k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wenect
  labels:
    name: wenect
    environment: production
